add show (get) action to users controller and tests

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,5 +5,5 @@ one:
   password_digest: MyString
 
 two:
-  email: MyString
-  password_digest: MyString
+  email: two@two.org
+  password_digest: MyString2
